--- a/quran/surat/al-baqoroh.mdx
+++ b/quran/surat/al-baqoroh.mdx
@@ -2,12 +2,12 @@ import FontSize from '@site/src/components/FontSize';
 
 <FontSize size="xx-large"></FontSize>
 
-
+۝١
 الۤمّۤ ۚ ۝١
 
 
 ذٰلِكَ الْكِتٰبُ لَا رَيْبَ ۛ فِيْهِ ۛ هُدًى لِّلْمُتَّقِيْنَۙ ۝٢
-
+۝٢
 
 الَّذِيْنَ يُؤْمِنُوْنَ بِالْغَيْبِ وَيُقِيْمُوْنَ الصَّلٰوةَ وَمِمَّا رَزَقْنٰهُمْ يُنْفِقُوْنَ ۙ ۝٣
 
@@ -180,245 +180,244 @@ import FontSize from '@site/src/components/FontSize';
 فَبَدَّلَ الَّذِيْنَ ظَلَمُوْا قَوْلًا غَيْرَ الَّذِيْ قِيْلَ لَهُمْ فَاَنْزَلْنَا عَلَى الَّذِيْنَ ظَلَمُوْا رِجْزًا مِّنَ السَّمَاۤءِ بِمَا كَانُوْا يَفْسُقُوْنَ ࣖ ۝٥٩
 
 
-۞ وَاِذِ اسْتَسْقٰى مُوْسٰى لِقَوْمِهٖ فَقُلْنَا اضْرِبْ بِّعَصَاكَ الْحَجَرَۗ فَانْفَجَرَتْ مِنْهُ اثْنَتَا عَشْرَةَ عَيْنًا ۗ قَدْ عَلِمَ كُلُّ اُنَاسٍ مَّشْرَبَهُمْ ۗ كُلُوْا وَاشْرَبُوْا مِنْ رِّزْقِ اللّٰهِ وَلَا تَعْثَوْا فِى الْاَرْضِ مُفْسِدِيْنَ
+۞ وَاِذِ اسْتَسْقٰى مُوْسٰى لِقَوْمِهٖ فَقُلْنَا اضْرِبْ بِّعَصَاكَ الْحَجَرَۗ فَانْفَجَرَتْ مِنْهُ اثْنَتَا عَشْرَةَ عَيْنًا ۗ قَدْ عَلِمَ كُلُّ اُنَاسٍ مَّشْرَبَهُمْ ۗ كُلُوْا وَاشْرَبُوْا مِنْ رِّزْقِ اللّٰهِ وَلَا تَعْثَوْا فِى الْاَرْضِ مُفْسِدِيْنَ ۝
 
 
+وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نَّصْبِرَ عَلٰى طَعَامٍ وَّاحِدٍ فَادْعُ لَنَا رَبَّكَ يُخْرِجْ لَنَا مِمَّا تُنْۢبِتُ الْاَرْضُ مِنْۢ بَقْلِهَا وَقِثَّاۤىِٕهَا وَفُوْمِهَا وَعَدَسِهَا وَبَصَلِهَا ۗ قَالَ اَتَسْتَبْدِلُوْنَ الَّذِيْ هُوَ اَدْنٰى بِالَّذِيْ هُوَ خَيْرٌ ۗ اِهْبِطُوْا مِصْرًا فَاِنَّ لَكُمْ مَّا سَاَلْتُمْ ۗ وَضُرِبَتْ عَلَيْهِمُ الذِّلَّةُ وَالْمَسْكَنَةُ وَبَاۤءُوْ بِغَضَبٍ مِّنَ اللّٰهِ ۗ ذٰلِكَ بِاَنَّهُمْ كَانُوْا يَكْفُرُوْنَ بِاٰيٰتِ اللّٰهِ وَيَقْتُلُوْنَ النَّبِيّٖنَ بِغَيْرِ الْحَقِّ ۗ ذٰلِكَ بِمَا عَصَوْا وَّكَانُوْا يَعْتَدُوْنَ ࣖ ۝
 
-وَاِذْ قُلْتُمْ يٰمُوْسٰى لَنْ نَّصْبِرَ عَلٰى طَعَامٍ وَّاحِدٍ فَادْعُ لَنَا رَبَّكَ يُخْرِجْ لَنَا مِمَّا تُنْۢبِتُ الْاَرْضُ مِنْۢ بَقْلِهَا وَقِثَّاۤىِٕهَا وَفُوْمِهَا وَعَدَسِهَا وَبَصَلِهَا ۗ قَالَ اَتَسْتَبْدِلُوْنَ الَّذِيْ هُوَ اَدْنٰى بِالَّذِيْ هُوَ خَيْرٌ ۗ اِهْبِطُوْا مِصْرًا فَاِنَّ لَكُمْ مَّا سَاَلْتُمْ ۗ وَضُرِبَتْ عَلَيْهِمُ الذِّلَّةُ وَالْمَسْكَنَةُ وَبَاۤءُوْ بِغَضَبٍ مِّنَ اللّٰهِ ۗ ذٰلِكَ بِاَنَّهُمْ كَانُوْا يَكْفُرُوْنَ بِاٰيٰتِ اللّٰهِ وَيَقْتُلُوْنَ النَّبِيّٖنَ بِغَيْرِ الْحَقِّ ۗ ذٰلِكَ بِمَا عَصَوْا وَّكَانُوْا يَعْتَدُوْنَ ࣖ 
 
+اِنَّ الَّذِيْنَ اٰمَنُوْا وَالَّذِيْنَ هَادُوْا وَالنَّصٰرٰى وَالصَّابِــِٕيْنَ مَنْ اٰمَنَ بِاللّٰهِ وَالْيَوْمِ الْاٰخِرِ وَعَمِلَ صَالِحًا فَلَهُمْ اَجْرُهُمْ عِنْدَ رَبِّهِمْۚ وَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ ۝
 
-اِنَّ الَّذِيْنَ اٰمَنُوْا وَالَّذِيْنَ هَادُوْا وَالنَّصٰرٰى وَالصَّابِــِٕيْنَ مَنْ اٰمَنَ بِاللّٰهِ وَالْيَوْمِ الْاٰخِرِ وَعَمِلَ صَالِحًا فَلَهُمْ اَجْرُهُمْ عِنْدَ رَبِّهِمْۚ وَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ
 
+وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ وَرَفَعْنَا فَوْقَكُمُ الطُّوْرَۗ خُذُوْا مَآ اٰتَيْنٰكُمْ بِقُوَّةٍ وَّاذْكُرُوْا مَا فِيْهِ لَعَلَّكُمْ تَتَّقُوْنَ ۝
 
-وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ وَرَفَعْنَا فَوْقَكُمُ الطُّوْرَۗ خُذُوْا مَآ اٰتَيْنٰكُمْ بِقُوَّةٍ وَّاذْكُرُوْا مَا فِيْهِ لَعَلَّكُمْ تَتَّقُوْنَ
 
+ثُمَّ تَوَلَّيْتُمْ مِّنْۢ بَعْدِ ذٰلِكَ فَلَوْلَا فَضْلُ اللّٰهِ عَلَيْكُمْ وَرَحْمَتُهٗ لَكُنْتُمْ مِّنَ الْخٰسِرِيْنَ ۝
 
-ثُمَّ تَوَلَّيْتُمْ مِّنْۢ بَعْدِ ذٰلِكَ فَلَوْلَا فَضْلُ اللّٰهِ عَلَيْكُمْ وَرَحْمَتُهٗ لَكُنْتُمْ مِّنَ الْخٰسِرِيْنَ
 
+وَلَقَدْ عَلِمْتُمُ الَّذِيْنَ اعْتَدَوْا مِنْكُمْ فِى السَّبْتِ فَقُلْنَا لَهُمْ كُوْنُوْا قِرَدَةً خٰسِـِٕيْنَ ۝
 
-وَلَقَدْ عَلِمْتُمُ الَّذِيْنَ اعْتَدَوْا مِنْكُمْ فِى السَّبْتِ فَقُلْنَا لَهُمْ كُوْنُوْا قِرَدَةً خٰسِـِٕيْنَ
 
+فَجَعَلْنٰهَا نَكَالًا لِّمَا بَيْنَ يَدَيْهَا وَمَا خَلْفَهَا وَمَوْعِظَةً لِّلْمُتَّقِيْنَ ۝
 
-فَجَعَلْنٰهَا نَكَالًا لِّمَا بَيْنَ يَدَيْهَا وَمَا خَلْفَهَا وَمَوْعِظَةً لِّلْمُتَّقِيْنَ
 
+وَاِذْ قَالَ مُوْسٰى لِقَوْمِهٖٓ اِنَّ اللّٰهَ يَأْمُرُكُمْ اَنْ تَذْبَحُوْا بَقَرَةً ۗ قَالُوْٓا اَتَتَّخِذُنَا هُزُوًا ۗ قَالَ اَعُوْذُ بِاللّٰهِ اَنْ اَكُوْنَ مِنَ الْجٰهِلِيْنَ ۝
 
-وَاِذْ قَالَ مُوْسٰى لِقَوْمِهٖٓ اِنَّ اللّٰهَ يَأْمُرُكُمْ اَنْ تَذْبَحُوْا بَقَرَةً ۗ قَالُوْٓا اَتَتَّخِذُنَا هُزُوًا ۗ قَالَ اَعُوْذُ بِاللّٰهِ اَنْ اَكُوْنَ مِنَ الْجٰهِلِيْنَ
 
+قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا هِيَ ۗ قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ لَّا فَارِضٌ وَّلَا بِكْرٌۗ عَوَانٌۢ بَيْنَ ذٰلِكَ ۗ فَافْعَلُوْا مَا تُؤْمَرُوْنَ ۝
 
-قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا هِيَ ۗ قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ لَّا فَارِضٌ وَّلَا بِكْرٌۗ عَوَانٌۢ بَيْنَ ذٰلِكَ ۗ فَافْعَلُوْا مَا تُؤْمَرُوْنَ
 
+قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا لَوْنُهَا ۗ قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ صَفْرَاۤءُ فَاقِعٌ لَّوْنُهَا تَسُرُّ النّٰظِرِيْنَ ۝
 
-قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا لَوْنُهَا ۗ قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ صَفْرَاۤءُ فَاقِعٌ لَّوْنُهَا تَسُرُّ النّٰظِرِيْنَ
 
+قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا هِيَۙ اِنَّ الْبَقَرَ تَشٰبَهَ عَلَيْنَاۗ وَاِنَّآ اِنْ شَاۤءَ اللّٰهُ لَمُهْتَدُوْنَ ۝
 
-قَالُوا ادْعُ لَنَا رَبَّكَ يُبَيِّنْ لَّنَا مَا هِيَۙ اِنَّ الْبَقَرَ تَشٰبَهَ عَلَيْنَاۗ وَاِنَّآ اِنْ شَاۤءَ اللّٰهُ لَمُهْتَدُوْنَ
 
+قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ لَّا ذَلُوْلٌ تُثِيْرُ الْاَرْضَ وَلَا تَسْقِى الْحَرْثَۚ مُسَلَّمَةٌ لَّاشِيَةَ فِيْهَا ۗ قَالُوا الْـٰٔنَ جِئْتَ بِالْحَقِّ فَذَبَحُوْهَا وَمَا كَادُوْا يَفْعَلُوْنَ ࣖ ۝
 
-قَالَ اِنَّهٗ يَقُوْلُ اِنَّهَا بَقَرَةٌ لَّا ذَلُوْلٌ تُثِيْرُ الْاَرْضَ وَلَا تَسْقِى الْحَرْثَۚ مُسَلَّمَةٌ لَّاشِيَةَ فِيْهَا ۗ قَالُوا الْـٰٔنَ جِئْتَ بِالْحَقِّ فَذَبَحُوْهَا وَمَا كَادُوْا يَفْعَلُوْنَ ࣖ
 
+وَاِذْ قَتَلْتُمْ نَفْسًا فَادّٰرَءْتُمْ فِيْهَا ۗ وَاللّٰهُ مُخْرِجٌ مَّا كُنْتُمْ تَكْتُمُوْنَ ۚ ۝
 
-وَاِذْ قَتَلْتُمْ نَفْسًا فَادّٰرَءْتُمْ فِيْهَا ۗ وَاللّٰهُ مُخْرِجٌ مَّا كُنْتُمْ تَكْتُمُوْنَ ۚ
 
+فَقُلْنَا اضْرِبُوْهُ بِبَعْضِهَاۗ كَذٰلِكَ يُحْيِ اللّٰهُ الْمَوْتٰى وَيُرِيْكُمْ اٰيٰتِهٖ لَعَلَّكُمْ تَعْقِلُوْنَ ۝
 
-فَقُلْنَا اضْرِبُوْهُ بِبَعْضِهَاۗ كَذٰلِكَ يُحْيِ اللّٰهُ الْمَوْتٰى وَيُرِيْكُمْ اٰيٰتِهٖ لَعَلَّكُمْ تَعْقِلُوْنَ
 
+ثُمَّ قَسَتْ قُلُوْبُكُمْ مِّنْۢ بَعْدِ ذٰلِكَ فَهِيَ كَالْحِجَارَةِ اَوْ اَشَدُّ قَسْوَةً ۗ وَاِنَّ مِنَ الْحِجَارَةِ لَمَا يَتَفَجَّرُ مِنْهُ الْاَنْهٰرُ ۗ وَاِنَّ مِنْهَا لَمَا يَشَّقَّقُ فَيَخْرُجُ مِنْهُ الْمَاۤءُ ۗوَاِنَّ مِنْهَا لَمَا يَهْبِطُ مِنْ خَشْيَةِ اللّٰهِ ۗوَمَا اللّٰهُ بِغَافِلٍ عَمَّا تَعْمَلُوْنَ ۝
 
-ثُمَّ قَسَتْ قُلُوْبُكُمْ مِّنْۢ بَعْدِ ذٰلِكَ فَهِيَ كَالْحِجَارَةِ اَوْ اَشَدُّ قَسْوَةً ۗ وَاِنَّ مِنَ الْحِجَارَةِ لَمَا يَتَفَجَّرُ مِنْهُ الْاَنْهٰرُ ۗ وَاِنَّ مِنْهَا لَمَا يَشَّقَّقُ فَيَخْرُجُ مِنْهُ الْمَاۤءُ ۗوَاِنَّ مِنْهَا لَمَا يَهْبِطُ مِنْ خَشْيَةِ اللّٰهِ ۗوَمَا اللّٰهُ بِغَافِلٍ عَمَّا تَعْمَلُوْنَ
 
+۞ اَفَتَطْمَعُوْنَ اَنْ يُّؤْمِنُوْا لَكُمْ وَقَدْ كَانَ فَرِيْقٌ مِّنْهُمْ يَسْمَعُوْنَ كَلَامَ اللّٰهِ ثُمَّ يُحَرِّفُوْنَهٗ مِنْۢ بَعْدِ مَا عَقَلُوْهُ وَهُمْ يَعْلَمُوْنَ ۝
 
-۞ اَفَتَطْمَعُوْنَ اَنْ يُّؤْمِنُوْا لَكُمْ وَقَدْ كَانَ فَرِيْقٌ مِّنْهُمْ يَسْمَعُوْنَ كَلَامَ اللّٰهِ ثُمَّ يُحَرِّفُوْنَهٗ مِنْۢ بَعْدِ مَا عَقَلُوْهُ وَهُمْ يَعْلَمُوْنَ
 
+وَاِذَا لَقُوا الَّذِيْنَ اٰمَنُوْا قَالُوْٓا اٰمَنَّاۚ وَاِذَا خَلَا بَعْضُهُمْ اِلٰى بَعْضٍ قَالُوْٓا اَتُحَدِّثُوْنَهُمْ بِمَا فَتَحَ اللّٰهُ عَلَيْكُمْ لِيُحَاۤجُّوْكُمْ بِهٖ عِنْدَ رَبِّكُمْ ۗ اَفَلَا تَعْقِلُوْنَ ۝
 
-وَاِذَا لَقُوا الَّذِيْنَ اٰمَنُوْا قَالُوْٓا اٰمَنَّاۚ وَاِذَا خَلَا بَعْضُهُمْ اِلٰى بَعْضٍ قَالُوْٓا اَتُحَدِّثُوْنَهُمْ بِمَا فَتَحَ اللّٰهُ عَلَيْكُمْ لِيُحَاۤجُّوْكُمْ بِهٖ عِنْدَ رَبِّكُمْ ۗ اَفَلَا تَعْقِلُوْنَ
 
+اَوَلَا يَعْلَمُوْنَ اَنَّ اللّٰهَ يَعْلَمُ مَا يُسِرُّوْنَ وَمَا يُعْلِنُوْنَ ۝
 
-اَوَلَا يَعْلَمُوْنَ اَنَّ اللّٰهَ يَعْلَمُ مَا يُسِرُّوْنَ وَمَا يُعْلِنُوْنَ
 
+وَمِنْهُمْ اُمِّيُّوْنَ لَا يَعْلَمُوْنَ الْكِتٰبَ اِلَّآ اَمَانِيَّ وَاِنْ هُمْ اِلَّا يَظُنُّوْنَ ۝
 
-وَمِنْهُمْ اُمِّيُّوْنَ لَا يَعْلَمُوْنَ الْكِتٰبَ اِلَّآ اَمَانِيَّ وَاِنْ هُمْ اِلَّا يَظُنُّوْنَ
 
+فَوَيْلٌ لِّلَّذِيْنَ يَكْتُبُوْنَ الْكِتٰبَ بِاَيْدِيْهِمْ ثُمَّ يَقُوْلُوْنَ هٰذَا مِنْ عِنْدِ اللّٰهِ لِيَشْتَرُوْا بِهٖ ثَمَنًا قَلِيْلًا ۗفَوَيْلٌ لَّهُمْ مِّمَّا كَتَبَتْ اَيْدِيْهِمْ وَوَيْلٌ لَّهُمْ مِّمَّا يَكْسِبُوْنَ ۝
 
-فَوَيْلٌ لِّلَّذِيْنَ يَكْتُبُوْنَ الْكِتٰبَ بِاَيْدِيْهِمْ ثُمَّ يَقُوْلُوْنَ هٰذَا مِنْ عِنْدِ اللّٰهِ لِيَشْتَرُوْا بِهٖ ثَمَنًا قَلِيْلًا ۗفَوَيْلٌ لَّهُمْ مِّمَّا كَتَبَتْ اَيْدِيْهِمْ وَوَيْلٌ لَّهُمْ مِّمَّا يَكْسِبُوْنَ
 
+وَقَالُوْا لَنْ تَمَسَّنَا النَّارُ اِلَّآ اَيَّامًا مَّعْدُوْدَةً ۗ قُلْ اَتَّخَذْتُمْ عِنْدَ اللّٰهِ عَهْدًا فَلَنْ يُّخْلِفَ اللّٰهُ عَهْدَهٗٓ اَمْ تَقُوْلُوْنَ عَلَى اللّٰهِ مَا لَا تَعْلَمُوْنَ ۝
 
-وَقَالُوْا لَنْ تَمَسَّنَا النَّارُ اِلَّآ اَيَّامًا مَّعْدُوْدَةً ۗ قُلْ اَتَّخَذْتُمْ عِنْدَ اللّٰهِ عَهْدًا فَلَنْ يُّخْلِفَ اللّٰهُ عَهْدَهٗٓ اَمْ تَقُوْلُوْنَ عَلَى اللّٰهِ مَا لَا تَعْلَمُوْنَ
 
+بَلٰى مَنْ كَسَبَ سَيِّئَةً وَّاَحَاطَتْ بِهٖ خَطِيْۤـَٔتُهٗ فَاُولٰۤىِٕكَ اَصْحٰبُ النَّارِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ ۝
 
-بَلٰى مَنْ كَسَبَ سَيِّئَةً وَّاَحَاطَتْ بِهٖ خَطِيْۤـَٔتُهٗ فَاُولٰۤىِٕكَ اَصْحٰبُ النَّارِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ
 
+وَالَّذِيْنَ اٰمَنُوْا وَعَمِلُوا الصّٰلِحٰتِ اُولٰۤىِٕكَ اَصْحٰبُ الْجَنَّةِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ ࣖ ۝
 
-وَالَّذِيْنَ اٰمَنُوْا وَعَمِلُوا الصّٰلِحٰتِ اُولٰۤىِٕكَ اَصْحٰبُ الْجَنَّةِ ۚ هُمْ فِيْهَا خٰلِدُوْنَ ࣖ
 
+وَاِذْ اَخَذْنَا مِيْثَاقَ بَنِيْٓ اِسْرَاۤءِيْلَ لَا تَعْبُدُوْنَ اِلَّا اللّٰهَ وَبِالْوَالِدَيْنِ اِحْسَانًا وَّذِى الْقُرْبٰى وَالْيَتٰمٰى وَالْمَسٰكِيْنِ وَقُوْلُوْا لِلنَّاسِ حُسْنًا وَّاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَۗ ثُمَّ تَوَلَّيْتُمْ اِلَّا قَلِيْلًا مِّنْكُمْ وَاَنْتُمْ مُّعْرِضُوْنَ ۝
 
-وَاِذْ اَخَذْنَا مِيْثَاقَ بَنِيْٓ اِسْرَاۤءِيْلَ لَا تَعْبُدُوْنَ اِلَّا اللّٰهَ وَبِالْوَالِدَيْنِ اِحْسَانًا وَّذِى الْقُرْبٰى وَالْيَتٰمٰى وَالْمَسٰكِيْنِ وَقُوْلُوْا لِلنَّاسِ حُسْنًا وَّاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَۗ ثُمَّ تَوَلَّيْتُمْ اِلَّا قَلِيْلًا مِّنْكُمْ وَاَنْتُمْ مُّعْرِضُوْنَ
 
+وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ لَا تَسْفِكُوْنَ دِمَاۤءَكُمْ وَلَا تُخْرِجُوْنَ اَنْفُسَكُمْ مِّنْ دِيَارِكُمْ ۖ ثُمَّ اَقْرَرْتُمْ وَاَنْتُمْ تَشْهَدُوْنَ ۝
 
-وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ لَا تَسْفِكُوْنَ دِمَاۤءَكُمْ وَلَا تُخْرِجُوْنَ اَنْفُسَكُمْ مِّنْ دِيَارِكُمْ ۖ ثُمَّ اَقْرَرْتُمْ وَاَنْتُمْ تَشْهَدُوْنَ
 
+ثُمَّ اَنْتُمْ هٰٓؤُلَاۤءِ تَقْتُلُوْنَ اَنْفُسَكُمْ وَتُخْرِجُوْنَ فَرِيْقًا مِّنْكُمْ مِّنْ دِيَارِهِمْۖ تَظٰهَرُوْنَ عَلَيْهِمْ بِالْاِثْمِ وَالْعُدْوَانِۗ وَاِنْ يَّأْتُوْكُمْ اُسٰرٰى تُفٰدُوْهُمْ وَهُوَ مُحَرَّمٌ عَلَيْكُمْ اِخْرَاجُهُمْ ۗ اَفَتُؤْمِنُوْنَ بِبَعْضِ الْكِتٰبِ وَتَكْفُرُوْنَ بِبَعْضٍۚ فَمَا جَزَاۤءُ مَنْ يَّفْعَلُ ذٰلِكَ مِنْكُمْ اِلَّا خِزْيٌ فِى الْحَيٰوةِ الدُّنْيَا ۚوَيَوْمَ الْقِيٰمَةِ يُرَدُّوْنَ اِلٰٓى اَشَدِّ الْعَذَابِۗ وَمَا اللّٰهُ بِغَافِلٍ عَمَّا تَعْمَلُوْنَ ۝
 
-ثُمَّ اَنْتُمْ هٰٓؤُلَاۤءِ تَقْتُلُوْنَ اَنْفُسَكُمْ وَتُخْرِجُوْنَ فَرِيْقًا مِّنْكُمْ مِّنْ دِيَارِهِمْۖ تَظٰهَرُوْنَ عَلَيْهِمْ بِالْاِثْمِ وَالْعُدْوَانِۗ وَاِنْ يَّأْتُوْكُمْ اُسٰرٰى تُفٰدُوْهُمْ وَهُوَ مُحَرَّمٌ عَلَيْكُمْ اِخْرَاجُهُمْ ۗ اَفَتُؤْمِنُوْنَ بِبَعْضِ الْكِتٰبِ وَتَكْفُرُوْنَ بِبَعْضٍۚ فَمَا جَزَاۤءُ مَنْ يَّفْعَلُ ذٰلِكَ مِنْكُمْ اِلَّا خِزْيٌ فِى الْحَيٰوةِ الدُّنْيَا ۚوَيَوْمَ الْقِيٰمَةِ يُرَدُّوْنَ اِلٰٓى اَشَدِّ الْعَذَابِۗ وَمَا اللّٰهُ بِغَافِلٍ عَمَّا تَعْمَلُوْنَ
 
+اُولٰۤىِٕكَ الَّذِيْنَ اشْتَرَوُا الْحَيٰوةَ الدُّنْيَا بِالْاٰخِرَةِ ۖ فَلَا يُخَفَّفُ عَنْهُمُ الْعَذَابُ وَلَا هُمْ يُنْصَرُوْنَ ࣖ ۝
 
-اُولٰۤىِٕكَ الَّذِيْنَ اشْتَرَوُا الْحَيٰوةَ الدُّنْيَا بِالْاٰخِرَةِ ۖ فَلَا يُخَفَّفُ عَنْهُمُ الْعَذَابُ وَلَا هُمْ يُنْصَرُوْنَ ࣖ
 
+وَلَقَدْ اٰتَيْنَا مُوْسَى الْكِتٰبَ وَقَفَّيْنَا مِنْۢ بَعْدِهٖ بِالرُّسُلِ ۖ وَاٰتَيْنَا عِيْسَى ابْنَ مَرْيَمَ الْبَيِّنٰتِ وَاَيَّدْنٰهُ بِرُوْحِ الْقُدُسِۗ اَفَكُلَّمَا جَاۤءَكُمْ رَسُوْلٌۢ بِمَا لَا تَهْوٰىٓ اَنْفُسُكُمُ اسْتَكْبَرْتُمْ ۚ فَفَرِيْقًا كَذَّبْتُمْ وَفَرِيْقًا تَقْتُلُوْنَ ۝
 
-وَلَقَدْ اٰتَيْنَا مُوْسَى الْكِتٰبَ وَقَفَّيْنَا مِنْۢ بَعْدِهٖ بِالرُّسُلِ ۖ وَاٰتَيْنَا عِيْسَى ابْنَ مَرْيَمَ الْبَيِّنٰتِ وَاَيَّدْنٰهُ بِرُوْحِ الْقُدُسِۗ اَفَكُلَّمَا جَاۤءَكُمْ رَسُوْلٌۢ بِمَا لَا تَهْوٰىٓ اَنْفُسُكُمُ اسْتَكْبَرْتُمْ ۚ فَفَرِيْقًا كَذَّبْتُمْ وَفَرِيْقًا تَقْتُلُوْنَ
 
+وَقَالُوْا قُلُوْبُنَا غُلْفٌ ۗ بَلْ لَّعَنَهُمُ اللّٰهُ بِكُفْرِهِمْ فَقَلِيْلًا مَّا يُؤْمِنُوْنَ ۝
 
-وَقَالُوْا قُلُوْبُنَا غُلْفٌ ۗ بَلْ لَّعَنَهُمُ اللّٰهُ بِكُفْرِهِمْ فَقَلِيْلًا مَّا يُؤْمِنُوْنَ
 
+وَلَمَّا جَاۤءَهُمْ كِتٰبٌ مِّنْ عِنْدِ اللّٰهِ مُصَدِّقٌ لِّمَا مَعَهُمْۙ وَكَانُوْا مِنْ قَبْلُ يَسْتَفْتِحُوْنَ عَلَى الَّذِيْنَ كَفَرُوْاۚ فَلَمَّا جَاۤءَهُمْ مَّا عَرَفُوْا كَفَرُوْا بِهٖ ۖ فَلَعْنَةُ اللّٰهِ عَلَى الْكٰفِرِيْنَ ۝
 
-وَلَمَّا جَاۤءَهُمْ كِتٰبٌ مِّنْ عِنْدِ اللّٰهِ مُصَدِّقٌ لِّمَا مَعَهُمْۙ وَكَانُوْا مِنْ قَبْلُ يَسْتَفْتِحُوْنَ عَلَى الَّذِيْنَ كَفَرُوْاۚ فَلَمَّا جَاۤءَهُمْ مَّا عَرَفُوْا كَفَرُوْا بِهٖ ۖ فَلَعْنَةُ اللّٰهِ عَلَى الْكٰفِرِيْنَ
 
+بِئْسَمَا اشْتَرَوْا بِهٖٓ اَنْفُسَهُمْ اَنْ يَّكْفُرُوْا بِمَآ اَنْزَلَ اللّٰهُ بَغْيًا اَنْ يُّنَزِّلَ اللّٰهُ مِنْ فَضْلِهٖ عَلٰى مَنْ يَّشَاۤءُ مِنْ عِبَادِهٖ ۚ فَبَاۤءُوْ بِغَضَبٍ عَلٰى غَضَبٍۗ وَلِلْكٰفِرِيْنَ عَذَابٌ مُّهِيْنٌ ۝
 
-بِئْسَمَا اشْتَرَوْا بِهٖٓ اَنْفُسَهُمْ اَنْ يَّكْفُرُوْا بِمَآ اَنْزَلَ اللّٰهُ بَغْيًا اَنْ يُّنَزِّلَ اللّٰهُ مِنْ فَضْلِهٖ عَلٰى مَنْ يَّشَاۤءُ مِنْ عِبَادِهٖ ۚ فَبَاۤءُوْ بِغَضَبٍ عَلٰى غَضَبٍۗ وَلِلْكٰفِرِيْنَ عَذَابٌ مُّهِيْنٌ
 
+وَاِذَا قِيْلَ لَهُمْ اٰمِنُوْا بِمَآ اَنْزَلَ اللّٰهُ قَالُوْا نُؤْمِنُ بِمَآ اُنْزِلَ عَلَيْنَا وَيَكْفُرُوْنَ بِمَا وَرَاۤءَهٗ وَهُوَ الْحَقُّ مُصَدِّقًا لِّمَا مَعَهُمْ ۗ قُلْ فَلِمَ تَقْتُلُوْنَ اَنْۢبِيَاۤءَ اللّٰهِ مِنْ قَبْلُ اِنْ كُنْتُمْ مُّؤْمِنِيْنَ ۝
 
-وَاِذَا قِيْلَ لَهُمْ اٰمِنُوْا بِمَآ اَنْزَلَ اللّٰهُ قَالُوْا نُؤْمِنُ بِمَآ اُنْزِلَ عَلَيْنَا وَيَكْفُرُوْنَ بِمَا وَرَاۤءَهٗ وَهُوَ الْحَقُّ مُصَدِّقًا لِّمَا مَعَهُمْ ۗ قُلْ فَلِمَ تَقْتُلُوْنَ اَنْۢبِيَاۤءَ اللّٰهِ مِنْ قَبْلُ اِنْ كُنْتُمْ مُّؤْمِنِيْنَ
 
+۞ وَلَقَدْ جَاۤءَكُمْ مُّوْسٰى بِالْبَيِّنٰتِ ثُمَّ اتَّخَذْتُمُ الْعِجْلَ مِنْۢ بَعْدِهٖ وَاَنْتُمْ ظٰلِمُوْنَ ۝
 
-۞ وَلَقَدْ جَاۤءَكُمْ مُّوْسٰى بِالْبَيِّنٰتِ ثُمَّ اتَّخَذْتُمُ الْعِجْلَ مِنْۢ بَعْدِهٖ وَاَنْتُمْ ظٰلِمُوْنَ
 
+وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ وَرَفَعْنَا فَوْقَكُمُ الطُّوْرَۗ خُذُوْا مَآ اٰتَيْنٰكُمْ بِقُوَّةٍ وَّاسْمَعُوْا ۗ قَالُوْا سَمِعْنَا وَعَصَيْنَا وَاُشْرِبُوْا فِيْ قُلُوْبِهِمُ الْعِجْلَ بِكُفْرِهِمْ ۗ قُلْ بِئْسَمَا يَأْمُرُكُمْ بِهٖٓ اِيْمَانُكُمْ اِنْ كُنْتُمْ مُّؤْمِنِيْنَ ۝
 
-وَاِذْ اَخَذْنَا مِيْثَاقَكُمْ وَرَفَعْنَا فَوْقَكُمُ الطُّوْرَۗ خُذُوْا مَآ اٰتَيْنٰكُمْ بِقُوَّةٍ وَّاسْمَعُوْا ۗ قَالُوْا سَمِعْنَا وَعَصَيْنَا وَاُشْرِبُوْا فِيْ قُلُوْبِهِمُ الْعِجْلَ بِكُفْرِهِمْ ۗ قُلْ بِئْسَمَا يَأْمُرُكُمْ بِهٖٓ اِيْمَانُكُمْ اِنْ كُنْتُمْ مُّؤْمِنِيْنَ
 
+قُلْ اِنْ كَانَتْ لَكُمُ الدَّارُ الْاٰخِرَةُ عِنْدَ اللّٰهِ خَالِصَةً مِّنْ دُوْنِ النَّاسِ فَتَمَنَّوُا الْمَوْتَ اِنْ كُنْتُمْ صٰدِقِيْنَ ۝
 
-قُلْ اِنْ كَانَتْ لَكُمُ الدَّارُ الْاٰخِرَةُ عِنْدَ اللّٰهِ خَالِصَةً مِّنْ دُوْنِ النَّاسِ فَتَمَنَّوُا الْمَوْتَ اِنْ كُنْتُمْ صٰدِقِيْنَ
 
+وَلَنْ يَّتَمَنَّوْهُ اَبَدًاۢ بِمَا قَدَّمَتْ اَيْدِيْهِمْ ۗ وَاللّٰهُ عَلِيْمٌ ۢ بِالظّٰلِمِيْنَ ۝
 
-وَلَنْ يَّتَمَنَّوْهُ اَبَدًاۢ بِمَا قَدَّمَتْ اَيْدِيْهِمْ ۗ وَاللّٰهُ عَلِيْمٌ ۢ بِالظّٰلِمِيْنَ
 
+وَلَتَجِدَنَّهُمْ اَحْرَصَ النَّاسِ عَلٰى حَيٰوةٍ ۛوَمِنَ الَّذِيْنَ اَشْرَكُوْا ۛيَوَدُّ اَحَدُهُمْ لَوْ يُعَمَّرُ اَلْفَ سَنَةٍۚ وَمَا هُوَ بِمُزَحْزِحِهٖ مِنَ الْعَذَابِ اَنْ يُّعَمَّرَۗ وَاللّٰهُ بَصِيْرٌۢ بِمَا يَعْمَلُوْنَ ࣖ ۝
 
-وَلَتَجِدَنَّهُمْ اَحْرَصَ النَّاسِ عَلٰى حَيٰوةٍ ۛوَمِنَ الَّذِيْنَ اَشْرَكُوْا ۛيَوَدُّ اَحَدُهُمْ لَوْ يُعَمَّرُ اَلْفَ سَنَةٍۚ وَمَا هُوَ بِمُزَحْزِحِهٖ مِنَ الْعَذَابِ اَنْ يُّعَمَّرَۗ وَاللّٰهُ بَصِيْرٌۢ بِمَا يَعْمَلُوْنَ ࣖ
 
+قُلْ مَنْ كَانَ عَدُوًّا لِّجِبْرِيْلَ فَاِنَّهٗ نَزَّلَهٗ عَلٰى قَلْبِكَ بِاِذْنِ اللّٰهِ مُصَدِّقًا لِّمَا بَيْنَ يَدَيْهِ وَهُدًى وَّبُشْرٰى لِلْمُؤْمِنِيْنَ ۝
 
-قُلْ مَنْ كَانَ عَدُوًّا لِّجِبْرِيْلَ فَاِنَّهٗ نَزَّلَهٗ عَلٰى قَلْبِكَ بِاِذْنِ اللّٰهِ مُصَدِّقًا لِّمَا بَيْنَ يَدَيْهِ وَهُدًى وَّبُشْرٰى لِلْمُؤْمِنِيْنَ
 
+مَنْ كَانَ عَدُوًّا لِّلّٰهِ وَمَلٰۤىِٕكَتِهٖ وَرُسُلِهٖ وَجِبْرِيْلَ وَمِيْكٰىلَ فَاِنَّ اللّٰهَ عَدُوٌّ لِّلْكٰفِرِيْنَ ۝
 
-مَنْ كَانَ عَدُوًّا لِّلّٰهِ وَمَلٰۤىِٕكَتِهٖ وَرُسُلِهٖ وَجِبْرِيْلَ وَمِيْكٰىلَ فَاِنَّ اللّٰهَ عَدُوٌّ لِّلْكٰفِرِيْنَ
 
+وَلَقَدْ اَنْزَلْنَآ اِلَيْكَ اٰيٰتٍۢ بَيِّنٰتٍۚ وَمَا يَكْفُرُ بِهَآ اِلَّا الْفٰسِقُوْنَ ۝
 
-وَلَقَدْ اَنْزَلْنَآ اِلَيْكَ اٰيٰتٍۢ بَيِّنٰتٍۚ وَمَا يَكْفُرُ بِهَآ اِلَّا الْفٰسِقُوْنَ
 
+اَوَكُلَّمَا عٰهَدُوْا عَهْدًا نَّبَذَهٗ فَرِيْقٌ مِّنْهُمْ ۗ بَلْ اَكْثَرُهُمْ لَا يُؤْمِنُوْنَ ۝
 
-اَوَكُلَّمَا عٰهَدُوْا عَهْدًا نَّبَذَهٗ فَرِيْقٌ مِّنْهُمْ ۗ بَلْ اَكْثَرُهُمْ لَا يُؤْمِنُوْنَ
 
+وَلَمَّا جَاۤءَهُمْ رَسُوْلٌ مِّنْ عِنْدِ اللّٰهِ مُصَدِّقٌ لِّمَا مَعَهُمْ نَبَذَ فَرِيْقٌ مِّنَ الَّذِيْنَ اُوْتُوا الْكِتٰبَۙ كِتٰبَ اللّٰهِ وَرَاۤءَ ظُهُوْرِهِمْ كَاَنَّهُمْ لَا يَعْلَمُوْنَۖ ۝
 
-وَلَمَّا جَاۤءَهُمْ رَسُوْلٌ مِّنْ عِنْدِ اللّٰهِ مُصَدِّقٌ لِّمَا مَعَهُمْ نَبَذَ فَرِيْقٌ مِّنَ الَّذِيْنَ اُوْتُوا الْكِتٰبَۙ كِتٰبَ اللّٰهِ وَرَاۤءَ ظُهُوْرِهِمْ كَاَنَّهُمْ لَا يَعْلَمُوْنَۖ
 
+وَاتَّبَعُوْا مَا تَتْلُوا الشَّيٰطِيْنُ عَلٰى مُلْكِ سُلَيْمٰنَ ۚ وَمَا كَفَرَ سُلَيْمٰنُ وَلٰكِنَّ الشَّيٰطِيْنَ كَفَرُوْا يُعَلِّمُوْنَ النَّاسَ السِّحْرَ وَمَآ اُنْزِلَ عَلَى الْمَلَكَيْنِ بِبَابِلَ هَارُوْتَ وَمَارُوْتَ ۗ وَمَا يُعَلِّمٰنِ مِنْ اَحَدٍ حَتّٰى يَقُوْلَآ اِنَّمَا نَحْنُ فِتْنَةٌ فَلَا تَكْفُرْ ۗ فَيَتَعَلَّمُوْنَ مِنْهُمَا مَا يُفَرِّقُوْنَ بِهٖ بَيْنَ الْمَرْءِ وَزَوْجِهٖ ۗ وَمَا هُمْ بِضَاۤرِّيْنَ بِهٖ مِنْ اَحَدٍ اِلَّا بِاِذْنِ اللّٰهِ ۗ وَيَتَعَلَّمُوْنَ مَا يَضُرُّهُمْ وَلَا يَنْفَعُهُمْ ۗ وَلَقَدْ عَلِمُوْا لَمَنِ اشْتَرٰىهُ مَا لَهٗ فِى الْاٰخِرَةِ مِنْ خَلَاقٍ ۗ وَلَبِئْسَ مَاشَرَوْا بِهٖٓ اَنْفُسَهُمْ ۗ لَوْ كَانُوْا يَعْلَمُوْنَ ۝
 
-وَاتَّبَعُوْا مَا تَتْلُوا الشَّيٰطِيْنُ عَلٰى مُلْكِ سُلَيْمٰنَ ۚ وَمَا كَفَرَ سُلَيْمٰنُ وَلٰكِنَّ الشَّيٰطِيْنَ كَفَرُوْا يُعَلِّمُوْنَ النَّاسَ السِّحْرَ وَمَآ اُنْزِلَ عَلَى الْمَلَكَيْنِ بِبَابِلَ هَارُوْتَ وَمَارُوْتَ ۗ وَمَا يُعَلِّمٰنِ مِنْ اَحَدٍ حَتّٰى يَقُوْلَآ اِنَّمَا نَحْنُ فِتْنَةٌ فَلَا تَكْفُرْ ۗ فَيَتَعَلَّمُوْنَ مِنْهُمَا مَا يُفَرِّقُوْنَ بِهٖ بَيْنَ الْمَرْءِ وَزَوْجِهٖ ۗ وَمَا هُمْ بِضَاۤرِّيْنَ بِهٖ مِنْ اَحَدٍ اِلَّا بِاِذْنِ اللّٰهِ ۗ وَيَتَعَلَّمُوْنَ مَا يَضُرُّهُمْ وَلَا يَنْفَعُهُمْ ۗ وَلَقَدْ عَلِمُوْا لَمَنِ اشْتَرٰىهُ مَا لَهٗ فِى الْاٰخِرَةِ مِنْ خَلَاقٍ ۗ وَلَبِئْسَ مَاشَرَوْا بِهٖٓ اَنْفُسَهُمْ ۗ لَوْ كَانُوْا يَعْلَمُوْنَ
 
+وَلَوْ اَنَّهُمْ اٰمَنُوْا وَاتَّقَوْا لَمَثُوْبَةٌ مِّنْ عِنْدِ اللّٰهِ خَيْرٌ ۗ لَوْ كَانُوْا يَعْلَمُوْنَ ࣖ ۝
 
-وَلَوْ اَنَّهُمْ اٰمَنُوْا وَاتَّقَوْا لَمَثُوْبَةٌ مِّنْ عِنْدِ اللّٰهِ خَيْرٌ ۗ لَوْ كَانُوْا يَعْلَمُوْنَ ࣖ
 
+يٰٓاَيُّهَا الَّذِيْنَ اٰمَنُوْا لَا تَقُوْلُوْا رَاعِنَا وَقُوْلُوا انْظُرْنَا وَاسْمَعُوْا وَلِلْكٰفِرِيْنَ عَذَابٌ اَلِيْمٌ ۝
 
-يٰٓاَيُّهَا الَّذِيْنَ اٰمَنُوْا لَا تَقُوْلُوْا رَاعِنَا وَقُوْلُوا انْظُرْنَا وَاسْمَعُوْا وَلِلْكٰفِرِيْنَ عَذَابٌ اَلِيْمٌ
 
+مَا يَوَدُّ الَّذِيْنَ كَفَرُوْا مِنْ اَهْلِ الْكِتٰبِ وَلَا الْمُشْرِكِيْنَ اَنْ يُّنَزَّلَ عَلَيْكُمْ مِّنْ خَيْرٍ مِّنْ رَّبِّكُمْ ۗ وَاللّٰهُ يَخْتَصُّ بِرَحْمَتِهٖ مَنْ يَّشَاۤءُ ۗ وَاللّٰهُ ذُو الْفَضْلِ الْعَظِيْمِ ۝
 
-مَا يَوَدُّ الَّذِيْنَ كَفَرُوْا مِنْ اَهْلِ الْكِتٰبِ وَلَا الْمُشْرِكِيْنَ اَنْ يُّنَزَّلَ عَلَيْكُمْ مِّنْ خَيْرٍ مِّنْ رَّبِّكُمْ ۗ وَاللّٰهُ يَخْتَصُّ بِرَحْمَتِهٖ مَنْ يَّشَاۤءُ ۗ وَاللّٰهُ ذُو الْفَضْلِ الْعَظِيْمِ
 
+۞ مَا نَنْسَخْ مِنْ اٰيَةٍ اَوْ نُنْسِهَا نَأْتِ بِخَيْرٍ مِّنْهَآ اَوْ مِثْلِهَا ۗ اَلَمْ تَعْلَمْ اَنَّ اللّٰهَ عَلٰى كُلِّ شَيْءٍ قَدِيْرٌ ۝
 
-۞ مَا نَنْسَخْ مِنْ اٰيَةٍ اَوْ نُنْسِهَا نَأْتِ بِخَيْرٍ مِّنْهَآ اَوْ مِثْلِهَا ۗ اَلَمْ تَعْلَمْ اَنَّ اللّٰهَ عَلٰى كُلِّ شَيْءٍ قَدِيْرٌ
 
+اَلَمْ تَعْلَمْ اَنَّ اللّٰهَ لَهٗ مُلْكُ السَّمٰوٰتِ وَالْاَرْضِ ۗ وَمَا لَكُمْ مِّنْ دُوْنِ اللّٰهِ مِنْ وَّلِيٍّ وَّلَا نَصِيْرٍ ۝
 
-اَلَمْ تَعْلَمْ اَنَّ اللّٰهَ لَهٗ مُلْكُ السَّمٰوٰتِ وَالْاَرْضِ ۗ وَمَا لَكُمْ مِّنْ دُوْنِ اللّٰهِ مِنْ وَّلِيٍّ وَّلَا نَصِيْرٍ
 
+اَمْ تُرِيْدُوْنَ اَنْ تَسْـَٔلُوْا رَسُوْلَكُمْ كَمَا سُىِٕلَ مُوْسٰى مِنْ قَبْلُ ۗوَمَنْ يَّتَبَدَّلِ الْكُفْرَ بِالْاِيْمَانِ فَقَدْ ضَلَّ سَوَاۤءَ السَّبِيْلِ ۝
 
-اَمْ تُرِيْدُوْنَ اَنْ تَسْـَٔلُوْا رَسُوْلَكُمْ كَمَا سُىِٕلَ مُوْسٰى مِنْ قَبْلُ ۗوَمَنْ يَّتَبَدَّلِ الْكُفْرَ بِالْاِيْمَانِ فَقَدْ ضَلَّ سَوَاۤءَ السَّبِيْلِ
 
+وَدَّ كَثِيْرٌ مِّنْ اَهْلِ الْكِتٰبِ لَوْ يَرُدُّوْنَكُمْ مِّنْۢ بَعْدِ اِيْمَانِكُمْ كُفَّارًاۚ حَسَدًا مِّنْ عِنْدِ اَنْفُسِهِمْ مِّنْۢ بَعْدِ مَا تَبَيَّنَ لَهُمُ الْحَقُّ ۚ فَاعْفُوْا وَاصْفَحُوْا حَتّٰى يَأْتِيَ اللّٰهُ بِاَمْرِهٖ ۗ اِنَّ اللّٰهَ عَلٰى كُلِّ شَيْءٍ قَدِيْرٌ ۝
 
-وَدَّ كَثِيْرٌ مِّنْ اَهْلِ الْكِتٰبِ لَوْ يَرُدُّوْنَكُمْ مِّنْۢ بَعْدِ اِيْمَانِكُمْ كُفَّارًاۚ حَسَدًا مِّنْ عِنْدِ اَنْفُسِهِمْ مِّنْۢ بَعْدِ مَا تَبَيَّنَ لَهُمُ الْحَقُّ ۚ فَاعْفُوْا وَاصْفَحُوْا حَتّٰى يَأْتِيَ اللّٰهُ بِاَمْرِهٖ ۗ اِنَّ اللّٰهَ عَلٰى كُلِّ شَيْءٍ قَدِيْرٌ
 
+وَاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَ ۗ وَمَا تُقَدِّمُوْا لِاَنْفُسِكُمْ مِّنْ خَيْرٍ تَجِدُوْهُ عِنْدَ اللّٰهِ ۗ اِنَّ اللّٰهَ بِمَا تَعْمَلُوْنَ بَصِيْرٌ ۝
 
-وَاَقِيْمُوا الصَّلٰوةَ وَاٰتُوا الزَّكٰوةَ ۗ وَمَا تُقَدِّمُوْا لِاَنْفُسِكُمْ مِّنْ خَيْرٍ تَجِدُوْهُ عِنْدَ اللّٰهِ ۗ اِنَّ اللّٰهَ بِمَا تَعْمَلُوْنَ بَصِيْرٌ
 
+وَقَالُوْا لَنْ يَّدْخُلَ الْجَنَّةَ اِلَّا مَنْ كَانَ هُوْدًا اَوْ نَصٰرٰى ۗ تِلْكَ اَمَانِيُّهُمْ ۗ قُلْ هَاتُوْا بُرْهَانَكُمْ اِنْ كُنْتُمْ صٰدِقِيْنَ ۝
 
-وَقَالُوْا لَنْ يَّدْخُلَ الْجَنَّةَ اِلَّا مَنْ كَانَ هُوْدًا اَوْ نَصٰرٰى ۗ تِلْكَ اَمَانِيُّهُمْ ۗ قُلْ هَاتُوْا بُرْهَانَكُمْ اِنْ كُنْتُمْ صٰدِقِيْنَ
 
+بَلٰى مَنْ اَسْلَمَ وَجْهَهٗ لِلّٰهِ وَهُوَ مُحْسِنٌ فَلَهٗٓ اَجْرُهٗ عِنْدَ رَبِّهٖۖ وَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ ࣖ ۝
 
-بَلٰى مَنْ اَسْلَمَ وَجْهَهٗ لِلّٰهِ وَهُوَ مُحْسِنٌ فَلَهٗٓ اَجْرُهٗ عِنْدَ رَبِّهٖۖ وَلَا خَوْفٌ عَلَيْهِمْ وَلَا هُمْ يَحْزَنُوْنَ ࣖ
 
+وَقَالَتِ الْيَهُوْدُ لَيْسَتِ النَّصٰرٰى عَلٰى شَيْءٍۖ وَّقَالَتِ النَّصٰرٰى لَيْسَتِ الْيَهُوْدُ عَلٰى شَيْءٍۙ وَّهُمْ يَتْلُوْنَ الْكِتٰبَۗ كَذٰلِكَ قَالَ الَّذِيْنَ لَا يَعْلَمُوْنَ مِثْلَ قَوْلِهِمْ ۚ فَاللّٰهُ يَحْكُمُ بَيْنَهُمْ يَوْمَ الْقِيٰمَةِ فِيْمَا كَانُوْا فِيْهِ يَخْتَلِفُوْنَ ۝
 
-وَقَالَتِ الْيَهُوْدُ لَيْسَتِ النَّصٰرٰى عَلٰى شَيْءٍۖ وَّقَالَتِ النَّصٰرٰى لَيْسَتِ الْيَهُوْدُ عَلٰى شَيْءٍۙ وَّهُمْ يَتْلُوْنَ الْكِتٰبَۗ كَذٰلِكَ قَالَ الَّذِيْنَ لَا يَعْلَمُوْنَ مِثْلَ قَوْلِهِمْ ۚ فَاللّٰهُ يَحْكُمُ بَيْنَهُمْ يَوْمَ الْقِيٰمَةِ فِيْمَا كَانُوْا فِيْهِ يَخْتَلِفُوْنَ
 
+وَمَنْ اَظْلَمُ مِمَّنْ مَّنَعَ مَسٰجِدَ اللّٰهِ اَنْ يُّذْكَرَ فِيْهَا اسْمُهٗ وَسَعٰى فِيْ خَرَابِهَاۗ اُولٰۤىِٕكَ مَا كَانَ لَهُمْ اَنْ يَّدْخُلُوْهَآ اِلَّا خَاۤىِٕفِيْنَ ەۗ لَهُمْ فِى الدُّنْيَا خِزْيٌ وَّلَهُمْ فِى الْاٰخِرَةِ عَذَابٌ عَظِيْمٌ ۝
 
-وَمَنْ اَظْلَمُ مِمَّنْ مَّنَعَ مَسٰجِدَ اللّٰهِ اَنْ يُّذْكَرَ فِيْهَا اسْمُهٗ وَسَعٰى فِيْ خَرَابِهَاۗ اُولٰۤىِٕكَ مَا كَانَ لَهُمْ اَنْ يَّدْخُلُوْهَآ اِلَّا خَاۤىِٕفِيْنَ ەۗ لَهُمْ فِى الدُّنْيَا خِزْيٌ وَّلَهُمْ فِى الْاٰخِرَةِ عَذَابٌ عَظِيْمٌ
 
+وَلِلّٰهِ الْمَشْرِقُ وَالْمَغْرِبُ فَاَيْنَمَا تُوَلُّوْا فَثَمَّ وَجْهُ اللّٰهِ ۗ اِنَّ اللّٰهَ وَاسِعٌ عَلِيْمٌ ۝
 
-وَلِلّٰهِ الْمَشْرِقُ وَالْمَغْرِبُ فَاَيْنَمَا تُوَلُّوْا فَثَمَّ وَجْهُ اللّٰهِ ۗ اِنَّ اللّٰهَ وَاسِعٌ عَلِيْمٌ
 
+وَقَالُوا اتَّخَذَ اللّٰهُ وَلَدًا ۙسُبْحٰنَهٗ ۗ بَلْ لَّهٗ مَا فِى السَّمٰوٰتِ وَالْاَرْضِۗ كُلٌّ لَّهٗ قٰنِتُوْنَ ۝
 
-وَقَالُوا اتَّخَذَ اللّٰهُ وَلَدًا ۙسُبْحٰنَهٗ ۗ بَلْ لَّهٗ مَا فِى السَّمٰوٰتِ وَالْاَرْضِۗ كُلٌّ لَّهٗ قٰنِتُوْنَ
 
+بَدِيْعُ السَّمٰوٰتِ وَالْاَرْضِۗ وَاِذَا قَضٰٓى اَمْرًا فَاِنَّمَا يَقُوْلُ لَهٗ كُنْ فَيَكُوْنُ ۝
 
-بَدِيْعُ السَّمٰوٰتِ وَالْاَرْضِۗ وَاِذَا قَضٰٓى اَمْرًا فَاِنَّمَا يَقُوْلُ لَهٗ كُنْ فَيَكُوْنُ
 
+وَقَالَ الَّذِيْنَ لَا يَعْلَمُوْنَ لَوْلَا يُكَلِّمُنَا اللّٰهُ اَوْ تَأْتِيْنَآ اٰيَةٌ ۗ كَذٰلِكَ قَالَ الَّذِيْنَ مِنْ قَبْلِهِمْ مِّثْلَ قَوْلِهِمْ ۗ تَشَابَهَتْ قُلُوْبُهُمْ ۗ قَدْ بَيَّنَّا الْاٰيٰتِ لِقَوْمٍ يُّوْقِنُوْنَ ۝
 
-وَقَالَ الَّذِيْنَ لَا يَعْلَمُوْنَ لَوْلَا يُكَلِّمُنَا اللّٰهُ اَوْ تَأْتِيْنَآ اٰيَةٌ ۗ كَذٰلِكَ قَالَ الَّذِيْنَ مِنْ قَبْلِهِمْ مِّثْلَ قَوْلِهِمْ ۗ تَشَابَهَتْ قُلُوْبُهُمْ ۗ قَدْ بَيَّنَّا الْاٰيٰتِ لِقَوْمٍ يُّوْقِنُوْنَ
 
+اِنَّآ اَرْسَلْنٰكَ بِالْحَقِّ بَشِيْرًا وَّنَذِيْرًاۙ وَّلَا تُسْـَٔلُ عَنْ اَصْحٰبِ الْجَحِيْمِ ۝
 
-اِنَّآ اَرْسَلْنٰكَ بِالْحَقِّ بَشِيْرًا وَّنَذِيْرًاۙ وَّلَا تُسْـَٔلُ عَنْ اَصْحٰبِ الْجَحِيْمِ
 
+وَلَنْ تَرْضٰى عَنْكَ الْيَهُوْدُ وَلَا النَّصٰرٰى حَتّٰى تَتَّبِعَ مِلَّتَهُمْ ۗ قُلْ اِنَّ هُدَى اللّٰهِ هُوَ الْهُدٰى ۗ وَلَىِٕنِ اتَّبَعْتَ اَهْوَاۤءَهُمْ بَعْدَ الَّذِيْ جَاۤءَكَ مِنَ الْعِلْمِ ۙ مَا لَكَ مِنَ اللّٰهِ مِنْ وَّلِيٍّ وَّلَا نَصِيْرٍ ۝
 
-وَلَنْ تَرْضٰى عَنْكَ الْيَهُوْدُ وَلَا النَّصٰرٰى حَتّٰى تَتَّبِعَ مِلَّتَهُمْ ۗ قُلْ اِنَّ هُدَى اللّٰهِ هُوَ الْهُدٰى ۗ وَلَىِٕنِ اتَّبَعْتَ اَهْوَاۤءَهُمْ بَعْدَ الَّذِيْ جَاۤءَكَ مِنَ الْعِلْمِ ۙ مَا لَكَ مِنَ اللّٰهِ مِنْ وَّلِيٍّ وَّلَا نَصِيْرٍ
 
+اَلَّذِيْنَ اٰتَيْنٰهُمُ الْكِتٰبَ يَتْلُوْنَهٗ حَقَّ تِلَاوَتِهٖۗ اُولٰۤىِٕكَ يُؤْمِنُوْنَ بِهٖ ۗ وَمَنْ يَّكْفُرْ بِهٖ فَاُولٰۤىِٕكَ هُمُ الْخٰسِرُوْنَ ࣖ ۝
 
-اَلَّذِيْنَ اٰتَيْنٰهُمُ الْكِتٰبَ يَتْلُوْنَهٗ حَقَّ تِلَاوَتِهٖۗ اُولٰۤىِٕكَ يُؤْمِنُوْنَ بِهٖ ۗ وَمَنْ يَّكْفُرْ بِهٖ فَاُولٰۤىِٕكَ هُمُ الْخٰسِرُوْنَ ࣖ
 
+يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَنِّيْ فَضَّلْتُكُمْ عَلَى الْعٰلَمِيْنَ ۝
 
-يٰبَنِيْٓ اِسْرَاۤءِيْلَ اذْكُرُوْا نِعْمَتِيَ الَّتِيْٓ اَنْعَمْتُ عَلَيْكُمْ وَاَنِّيْ فَضَّلْتُكُمْ عَلَى الْعٰلَمِيْنَ
 
+وَاتَّقُوْا يَوْمًا لَّا تَجْزِيْ نَفْسٌ عَنْ نَّفْسٍ شَيْـًٔا وَّلَا يُقْبَلُ مِنْهَا عَدْلٌ وَّلَا تَنْفَعُهَا شَفَاعَةٌ وَّلَا هُمْ يُنْصَرُوْنَ ۝
 
-وَاتَّقُوْا يَوْمًا لَّا تَجْزِيْ نَفْسٌ عَنْ نَّفْسٍ شَيْـًٔا وَّلَا يُقْبَلُ مِنْهَا عَدْلٌ وَّلَا تَنْفَعُهَا شَفَاعَةٌ وَّلَا هُمْ يُنْصَرُوْنَ
 
+۞ وَاِذِ ابْتَلٰٓى اِبْرٰهٖمَ رَبُّهٗ بِكَلِمٰتٍ فَاَتَمَّهُنَّ ۗ قَالَ اِنِّيْ جَاعِلُكَ لِلنَّاسِ اِمَامًا ۗ قَالَ وَمِنْ ذُرِّيَّتِيْ ۗ قَالَ لَا يَنَالُ عَهْدِى الظّٰلِمِيْنَ ۝
 
-۞ وَاِذِ ابْتَلٰٓى اِبْرٰهٖمَ رَبُّهٗ بِكَلِمٰتٍ فَاَتَمَّهُنَّ ۗ قَالَ اِنِّيْ جَاعِلُكَ لِلنَّاسِ اِمَامًا ۗ قَالَ وَمِنْ ذُرِّيَّتِيْ ۗ قَالَ لَا يَنَالُ عَهْدِى الظّٰلِمِيْنَ
 
+وَاِذْ جَعَلْنَا الْبَيْتَ مَثَابَةً لِّلنَّاسِ وَاَمْنًاۗ وَاتَّخِذُوْا مِنْ مَّقَامِ اِبْرٰهٖمَ مُصَلًّىۗ وَعَهِدْنَآ اِلٰٓى اِبْرٰهٖمَ وَاِسْمٰعِيْلَ اَنْ طَهِّرَا بَيْتِيَ لِلطَّاۤىِٕفِيْنَ وَالْعٰكِفِيْنَ وَالرُّكَّعِ السُّجُوْدِ ۝
 
-وَاِذْ جَعَلْنَا الْبَيْتَ مَثَابَةً لِّلنَّاسِ وَاَمْنًاۗ وَاتَّخِذُوْا مِنْ مَّقَامِ اِبْرٰهٖمَ مُصَلًّىۗ وَعَهِدْنَآ اِلٰٓى اِبْرٰهٖمَ وَاِسْمٰعِيْلَ اَنْ طَهِّرَا بَيْتِيَ لِلطَّاۤىِٕفِيْنَ وَالْعٰكِفِيْنَ وَالرُّكَّعِ السُّجُوْدِ
 
+وَاِذْ قَالَ اِبْرٰهٖمُ رَبِّ اجْعَلْ هٰذَا بَلَدًا اٰمِنًا وَّارْزُقْ اَهْلَهٗ مِنَ الثَّمَرٰتِ مَنْ اٰمَنَ مِنْهُمْ بِاللّٰهِ وَالْيَوْمِ الْاٰخِرِۗ قَالَ وَمَنْ كَفَرَ فَاُمَتِّعُهٗ قَلِيْلًا ثُمَّ اَضْطَرُّهٗٓ اِلٰى عَذَابِ النَّارِ ۗ وَبِئْسَ الْمَصِيْرُ ۝
 
-وَاِذْ قَالَ اِبْرٰهٖمُ رَبِّ اجْعَلْ هٰذَا بَلَدًا اٰمِنًا وَّارْزُقْ اَهْلَهٗ مِنَ الثَّمَرٰتِ مَنْ اٰمَنَ مِنْهُمْ بِاللّٰهِ وَالْيَوْمِ الْاٰخِرِۗ قَالَ وَمَنْ كَفَرَ فَاُمَتِّعُهٗ قَلِيْلًا ثُمَّ اَضْطَرُّهٗٓ اِلٰى عَذَابِ النَّارِ ۗ وَبِئْسَ الْمَصِيْرُ
 
+وَاِذْ يَرْفَعُ اِبْرٰهٖمُ الْقَوَاعِدَ مِنَ الْبَيْتِ وَاِسْمٰعِيْلُۗ رَبَّنَا تَقَبَّلْ مِنَّا ۗ اِنَّكَ اَنْتَ السَّمِيْعُ الْعَلِيْمُ ۝
 
-وَاِذْ يَرْفَعُ اِبْرٰهٖمُ الْقَوَاعِدَ مِنَ الْبَيْتِ وَاِسْمٰعِيْلُۗ رَبَّنَا تَقَبَّلْ مِنَّا ۗ اِنَّكَ اَنْتَ السَّمِيْعُ الْعَلِيْمُ
 
+رَبَّنَا وَاجْعَلْنَا مُسْلِمَيْنِ لَكَ وَمِنْ ذُرِّيَّتِنَآ اُمَّةً مُّسْلِمَةً لَّكَۖ وَاَرِنَا مَنَاسِكَنَا وَتُبْ عَلَيْنَا ۚ اِنَّكَ اَنْتَ التَّوَّابُ الرَّحِيْمُ ۝
 
-رَبَّنَا وَاجْعَلْنَا مُسْلِمَيْنِ لَكَ وَمِنْ ذُرِّيَّتِنَآ اُمَّةً مُّسْلِمَةً لَّكَۖ وَاَرِنَا مَنَاسِكَنَا وَتُبْ عَلَيْنَا ۚ اِنَّكَ اَنْتَ التَّوَّابُ الرَّحِيْمُ
 
+رَبَّنَا وَابْعَثْ فِيْهِمْ رَسُوْلًا مِّنْهُمْ يَتْلُوْا عَلَيْهِمْ اٰيٰتِكَ وَيُعَلِّمُهُمُ الْكِتٰبَ وَالْحِكْمَةَ وَيُزَكِّيْهِمْ ۗ اِنَّكَ اَنْتَ الْعَزِيْزُ الْحَكِيْمُ ࣖ ۝
 
-رَبَّنَا وَابْعَثْ فِيْهِمْ رَسُوْلًا مِّنْهُمْ يَتْلُوْا عَلَيْهِمْ اٰيٰتِكَ وَيُعَلِّمُهُمُ الْكِتٰبَ وَالْحِكْمَةَ وَيُزَكِّيْهِمْ ۗ اِنَّكَ اَنْتَ الْعَزِيْزُ الْحَكِيْمُ ࣖ
 
+وَمَنْ يَّرْغَبُ عَنْ مِّلَّةِ اِبْرٰهٖمَ اِلَّا مَنْ سَفِهَ نَفْسَهٗ ۗوَلَقَدِ اصْطَفَيْنٰهُ فِى الدُّنْيَا ۚوَاِنَّهٗ فِى الْاٰخِرَةِ لَمِنَ الصّٰلِحِيْنَ ۝
 
-وَمَنْ يَّرْغَبُ عَنْ مِّلَّةِ اِبْرٰهٖمَ اِلَّا مَنْ سَفِهَ نَفْسَهٗ ۗوَلَقَدِ اصْطَفَيْنٰهُ فِى الدُّنْيَا ۚوَاِنَّهٗ فِى الْاٰخِرَةِ لَمِنَ الصّٰلِحِيْنَ
 
+اِذْ قَالَ لَهٗ رَبُّهٗٓ اَسْلِمْۙ قَالَ اَسْلَمْتُ لِرَبِّ الْعٰلَمِيْنَ ۝
 
-اِذْ قَالَ لَهٗ رَبُّهٗٓ اَسْلِمْۙ قَالَ اَسْلَمْتُ لِرَبِّ الْعٰلَمِيْنَ
 
+وَوَصّٰى بِهَآ اِبْرٰهٖمُ بَنِيْهِ وَيَعْقُوْبُۗ يٰبَنِيَّ اِنَّ اللّٰهَ اصْطَفٰى لَكُمُ الدِّيْنَ فَلَا تَمُوْتُنَّ اِلَّا وَاَنْتُمْ مُّسْلِمُوْنَ ۗ ۝
 
-وَوَصّٰى بِهَآ اِبْرٰهٖمُ بَنِيْهِ وَيَعْقُوْبُۗ يٰبَنِيَّ اِنَّ اللّٰهَ اصْطَفٰى لَكُمُ الدِّيْنَ فَلَا تَمُوْتُنَّ اِلَّا وَاَنْتُمْ مُّسْلِمُوْنَ ۗ
 
+اَمْ كُنْتُمْ شُهَدَاۤءَ اِذْ حَضَرَ يَعْقُوْبَ الْمَوْتُۙ اِذْ قَالَ لِبَنِيْهِ مَا تَعْبُدُوْنَ مِنْۢ بَعْدِيْۗ قَالُوْا نَعْبُدُ اِلٰهَكَ وَاِلٰهَ اٰبَاۤىِٕكَ اِبْرٰهٖمَ وَاِسْمٰعِيْلَ وَاِسْحٰقَ اِلٰهًا وَّاحِدًاۚ وَنَحْنُ لَهٗ مُسْلِمُوْنَ ۝
 
-اَمْ كُنْتُمْ شُهَدَاۤءَ اِذْ حَضَرَ يَعْقُوْبَ الْمَوْتُۙ اِذْ قَالَ لِبَنِيْهِ مَا تَعْبُدُوْنَ مِنْۢ بَعْدِيْۗ قَالُوْا نَعْبُدُ اِلٰهَكَ وَاِلٰهَ اٰبَاۤىِٕكَ اِبْرٰهٖمَ وَاِسْمٰعِيْلَ وَاِسْحٰقَ اِلٰهًا وَّاحِدًاۚ وَنَحْنُ لَهٗ مُسْلِمُوْنَ
 
+تِلْكَ اُمَّةٌ قَدْ خَلَتْ ۚ لَهَا مَا كَسَبَتْ وَلَكُمْ مَّا كَسَبْتُمْ ۚ وَلَا تُسْـَٔلُوْنَ عَمَّا كَانُوْا يَعْمَلُوْنَ ۝
 
-تِلْكَ اُمَّةٌ قَدْ خَلَتْ ۚ لَهَا مَا كَسَبَتْ وَلَكُمْ مَّا كَسَبْتُمْ ۚ وَلَا تُسْـَٔلُوْنَ عَمَّا كَانُوْا يَعْمَلُوْنَ
 
+وَقَالُوْا كُوْنُوْا هُوْدًا اَوْ نَصٰرٰى تَهْتَدُوْا ۗ قُلْ بَلْ مِلَّةَ اِبْرٰهٖمَ حَنِيْفًا ۗوَمَا كَانَ مِنَ الْمُشْرِكِيْنَ ۝
 
-وَقَالُوْا كُوْنُوْا هُوْدًا اَوْ نَصٰرٰى تَهْتَدُوْا ۗ قُلْ بَلْ مِلَّةَ اِبْرٰهٖمَ حَنِيْفًا ۗوَمَا كَانَ مِنَ الْمُشْرِكِيْنَ
 
+قُوْلُوْٓا اٰمَنَّا بِاللّٰهِ وَمَآ اُنْزِلَ اِلَيْنَا وَمَآ اُنْزِلَ اِلٰٓى اِبْرٰهٖمَ وَاِسْمٰعِيْلَ وَاِسْحٰقَ وَيَعْقُوْبَ وَالْاَسْبَاطِ وَمَآ اُوْتِيَ مُوْسٰى وَعِيْسٰى وَمَآ اُوْتِيَ النَّبِيُّوْنَ مِنْ رَّبِّهِمْۚ لَا نُفَرِّقُ بَيْنَ اَحَدٍ مِّنْهُمْۖ وَنَحْنُ لَهٗ مُسْلِمُوْنَ ۝
 
-قُوْلُوْٓا اٰمَنَّا بِاللّٰهِ وَمَآ اُنْزِلَ اِلَيْنَا وَمَآ اُنْزِلَ اِلٰٓى اِبْرٰهٖمَ وَاِسْمٰعِيْلَ وَاِسْحٰقَ وَيَعْقُوْبَ وَالْاَسْبَاطِ وَمَآ اُوْتِيَ مُوْسٰى وَعِيْسٰى وَمَآ اُوْتِيَ النَّبِيُّوْنَ مِنْ رَّبِّهِمْۚ لَا نُفَرِّقُ بَيْنَ اَحَدٍ مِّنْهُمْۖ وَنَحْنُ لَهٗ مُسْلِمُوْنَ
 
+فَاِنْ اٰمَنُوْا بِمِثْلِ مَآ اٰمَنْتُمْ بِهٖ فَقَدِ اهْتَدَوْا ۚوَاِنْ تَوَلَّوْا فَاِنَّمَا هُمْ فِيْ شِقَاقٍۚ فَسَيَكْفِيْكَهُمُ اللّٰهُ ۚوَهُوَ السَّمِيْعُ الْعَلِيْمُ ۗ ۝
 
-فَاِنْ اٰمَنُوْا بِمِثْلِ مَآ اٰمَنْتُمْ بِهٖ فَقَدِ اهْتَدَوْا ۚوَاِنْ تَوَلَّوْا فَاِنَّمَا هُمْ فِيْ شِقَاقٍۚ فَسَيَكْفِيْكَهُمُ اللّٰهُ ۚوَهُوَ السَّمِيْعُ الْعَلِيْمُ ۗ
 
+صِبْغَةَ اللّٰهِ ۚ وَمَنْ اَحْسَنُ مِنَ اللّٰهِ صِبْغَةً ۖ وَّنَحْنُ لَهٗ عٰبِدُوْنَ ۝
 
-صِبْغَةَ اللّٰهِ ۚ وَمَنْ اَحْسَنُ مِنَ اللّٰهِ صِبْغَةً ۖ وَّنَحْنُ لَهٗ عٰبِدُوْنَ
 
-
-قُلْ اَتُحَاۤجُّوْنَنَا فِى اللّٰهِ وَهُوَ رَبُّنَا وَرَبُّكُمْۚ وَلَنَآ اَعْمَالُنَا وَلَكُمْ اَعْمَالُكُمْۚ وَنَحْنُ لَهٗ مُخْلِصُوْنَ ۙ
+قُلْ اَتُحَاۤجُّوْنَنَا فِى اللّٰهِ وَهُوَ رَبُّنَا وَرَبُّكُمْۚ وَلَنَآ اَعْمَالُنَا وَلَكُمْ اَعْمَالُكُمْۚ وَنَحْنُ لَهٗ مُخْلِصُوْنَ ۙ ۝
 
 
 اَمْ تَقُوْلُوْنَ اِنَّ اِبْرٰهٖمَ وَاِسْمٰعِيْلَ وَاِسْحٰقَ وَيَعْقُوْبَ وَالْاَسْبَاطَ كَانُوْا هُوْدًا اَوْ نَصٰرٰى ۗ قُلْ ءَاَنْتُمْ اَعْلَمُ اَمِ اللّٰهُ ۗ وَمَنْ اَظْلَمُ مِمَّنْ كَتَمَ شَهَادَةً عِنْدَهٗ مِنَ اللّٰهِ ۗ وَمَا اللّٰهُ بِغَافِلٍ عَمَّا تَعْمَلُوْنَ
